assignments/PA4/tests/bad/bad14.cl
class Main {
    main():Main{1};
};
